# job-platform-demo

./: README.md
.github/workflows/: backend-ci.yml
job-platform-demo-backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
job-platform-demo-backend/app/: manage.py  pytest.ini
job-platform-demo-backend/app/company/: api.py  models.py  schemas.py  tests.py
job-platform-demo-backend/app/company/migrations/: 0001_initial.py  0002_alter_company_name.py  0003_companydomain.py
job-platform-demo-backend/app/core/authz/: jwt_auth.py
job-platform-demo-backend/app/core/throttling/: redis.py
job-platform-demo-backend/app/job/: api.py  conftest.py  models.py  schemas.py  tests.py
job-platform-demo-backend/app/job/migrations/: 0001_initial.py  0002_job_job_job_title_23b697_idx_and_more.py  0003_job_created_by_job_last_updated_by.py
job-platform-demo-backend/app/job_platform_demo_backend/: api.py  asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
job-platform-demo-backend/app/user/: api.py  manager.py  models.py  schemas.py  tests.py
job-platform-demo-backend/app/user/migrations/: 0001_initial.py
